@@ -2,54 +2,47 @@ package com.company;
 
 import java.io.File;
 import java.io.IOException;
-import java.lang.reflect.Field;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 
 public class Library {
-    Path path = Path.of("C:\\Users\\isthi\\Documents\\Skola\\Git\\Projects\\advDatabaseTake5\\databases/library/");
+    Path path = Paths.get("databases/library/");
 
     Library() {
         checkPath();
-        Book b = new Book();
+
+        Book b = new Book("the ID and also file name", "the ISBN","the title", "the authorID", "the genre","the year");
         save(b, b.path);
-        Book c = new Book(makeListFromPath(b.path));
-        save(c,c.path);
-        //läsa
-        Book d = (Book) findOne("title", "testtitle1");
-        System.out.println(b.ISBN + " == " + c.ISBN);
+
+        Book d = (Book) findOne("title", "the title");
+
+        System.out.println("Same same: "+b.ISBN + " == " + d.ISBN);
     }
 
     public Object findOne(String key, String val) {
 
         for (File f : Database.getFilesFromPath(path)) {
             ArrayList<String> a = (ArrayList<String>) Database.makeListFromTxt(f.toPath());
-
-
-            if(a.get(0).startsWith(key)){
-                try {
-                    Field field = Book.class.getDeclaredField(key);
-                    System.out.println("field = " + field);
-                    //if(field.){
-                        Book n = new Book(a);
-                        if(n.getTitle().matches(val)){
-                            return n;
-                      //  }
-                    }
-                } catch (NoSuchFieldException e) {
-                    e.printStackTrace();
+            try {
+                Book.class.getDeclaredField(key);
+                Book n = new Book(a);
+                if (n.getTitle().matches(val)) {
+                    return n;
                 }
-
+            } catch (NoSuchFieldException e) {
+                e.printStackTrace();
+                //try (Field field = User.class.getDeclaredField(key);
             }
         }
-            return null;
+        return null;
 
     }
 
-
     public List<String> makeListFromPath(Path precisePath) {
+
         precisePath = Path.of(path.toString() + "/" + precisePath.toString());
         return Database.makeListFromTxt(precisePath);
     }
@@ -62,6 +55,7 @@ public class Library {
     }
 
     private void checkPath() {
+
         if (Files.exists(path)) {
             System.out.println("Path exists, all is well");
 
